# WSL-kernel-watcher

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHIVE_NOTICE.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT_PLAN.md  DOCKER_DESKTOP_SETUP.md  Directory.Build.props  Dockerfile  INSTALL.md  LICENSE  Makefile  README.md  README_V2.md  RELEASE_NOTES_v2.0.0.md  SECURITY.md  TEST_PLAN.md  WINDOWS_TEST.md  Z:\nonexistent\deeply\nested\path\config.toml  codecov.yml  config.template.toml  config.toml  docker-compose.wsl.yml  docker-compose.yml  global.json  install-monitor.sh  pyproject.toml  renovate.json  requirements-dev.txt  requirements.txt  run_wsl_watcher.bat  run_wsl_watcher_silent.vbs  test-notification.py  test-wsl-access.sh  uninstall-monitor.sh  wsl-file-watcher.sh  wsl-kernel-watcher-monitor.service
.amazonq/rules/: development-guidelines.md  project-rules.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
.kiro/specs/wsl-kernel-watcher/: design.md  requirements.md  tasks.md
.kiro/steering/: WSL_kernel_watcher_plan.md  rules.md
WSL-KERNEL-WATCHER_Docker_version_plan/: Dockerfile  config.py  docker-compose.yml  docker-run-example.md  github_client.py  install.ps1  main.py  mcp-docker-overview.md  mcp_client.py  notification-server-readme.md  notification_server.py  notification_server_enhanced.py  pyproject.toml  repositories.json  requirements-updated.txt  watcher-updated.py  watcher.py  wsl_utils.py  wsl_utils_docker.py
docs/: ARCHITECTURE_UPDATE.md  DEVELOPMENT_PLAN.md  INSTALLATION_GUIDE.md  NOTIFICATION_TEST.md  README.md  RELEASE_NOTES_v2.1.0.md  RELEASE_NOTES_v2.1.1.md  SETUP_WSL.md  SOLUTION.md  WINDOWS_LIGHTWEIGHT_APP.md  WINUI3_APP.md  installer_auto_update_plan.md  rules.md
interactive-tests/: README.md  __init__.py  run_all_tests.py  test_container_startup.py  test_core.py  test_docker_build.py  test_error_handling.py  test_full_flow.py  test_github_api.py  test_interactive_notification.py  test_quick.py  test_version_change.py  test_wsl_notification.py  test_wsl_notification_standalone.py
scripts/: README.md  create-shortcuts.ps1  install.ps1  setup-dev.ps1  uninstall.ps1
scripts/hooks/: README.md  pre-commit-build.ps1  pre-commit-format.ps1  pre-commit-test.ps1
src/: __init__.py  config.py  docker_notifier.py  github_api.py  github_watcher.py  logger.py  main.py  notification.py  scheduler.py  tray.py  wsl_utils.py
src_v2/: __init__.py  docker_notifier.py  main.py
tests/: test_config.py  test_docker_notifier.py  test_e2e_integration.py  test_e2e_notification.py  test_github_api.py  test_github_watcher.py  test_integration.py  test_logger.py  test_main.py  test_notification.py  test_scheduler.py  test_tray.py  test_wsl_utils.py
tests_v2/: __init__.py  test_config.py  test_docker_notifier.py  test_github_watcher.py  test_integration.py  test_main.py
windows_only_plan/: README.md  next_step.md  windows-only-implementation-plan.md  windows-only-prototype.ps1  windows-only-prototype.ps1.txt  windows_only_plan.md
winui3/: Directory.Packages.props  WSLKernelWatcher.WinUI3.sln  Xaml.binlog  msbuild.binlog  winui3-build.binlog
winui3/WSLKernelWatcher.WinUI3/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  WSLKernelWatcher.WinUI3.csproj  app.manifest
winui3/WSLKernelWatcher.WinUI3.Tests/: WSLKernelWatcher.WinUI3.Tests.csproj
winui3/WSLKernelWatcher.WinUI3.Tests/Services/: AutoUpdateServiceTests.cs  LoggingServiceTests.cs  SettingsServiceTests.cs
winui3/WSLKernelWatcher.WinUI3/Helpers/: TrayContextMenu.cs
winui3/WSLKernelWatcher.WinUI3/Properties/: AssemblyInfo.cs
winui3/WSLKernelWatcher.WinUI3/Services/: AutoUpdateService.cs  KernelWatcherService.cs  LoggingService.cs  NotificationService.cs  SettingsService.cs  TrayIconService.cs
