[project]
name = "wsl-kernel-watcher-devtools"
version = "0.0.0"
description = "WSL Kernel Watcher の開発用ツールセット（pre-commit など）"
requires-python = ">=3.10"
authors = [
    { name = "WSL Kernel Watcher Contributors" },
]
readme = "README.md"
license = { file = "LICENSE" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit==4.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/wsl_kernel_watcher_devtools"]
