[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "github-watcher-mcp"
version = "1.0.0"
description = "GitHub Repository Watcher for MCP-Docker with Windows Toast notifications"
requires-python = ">=3.9"

dependencies = [
    "requests>=2.31.0,<3.0.0",
    "aiohttp>=3.8.0,<4.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "schedule>=1.2.0,<2.0.0",
    "packaging>=23.0,<26.0",
]

[project.scripts]
github-watcher = "src.main:main"